--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<h1>Hola Taller</h1>
-<h2>Hola taller 2</h2>
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum quia voluptas natus cupiditate fugit quidem quasi amet minus nemo, assumenda nulla perferendis vero officiis iure dolorum quisquam ea ipsam?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos earum tempore nostrum non, adipisci vitae accusamus consequatur dolorem sint sunt architecto, nisi praesentium eum dicta amet, ab repellendus enim. Saepe!</p>
-
-
-<h2>hola hola </h2>
-
-<h2>fdfsdf </h2>
+<h1>
+    Hola Taller
+</h1>
+<h2>
+    Hola taller 2
+</h2>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum quia voluptas natus cupiditate fugit quidem quasi amet minus nemo, assumenda nulla perferendis vero officiis iure dolorum quisquam ea ipsam?
+</p>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos earum tempore nostrum non, adipisci vitae accusamus consequatur dolorem sint sunt architecto, nisi praesentium eum dicta amet, ab repellendus enim. Saepe!
+</p>
+<h2>
+    hola hola
+</h2>
+<h2>
+    fdfsdf
+</h2>
+<p>
+    Un cambio simple
+</p>
